--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 # NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE
 
 [metadata]
-name = wavestate
+name = wavestate.utilities
 version = 0.0.1.dev0
 
 license = Apache-2.0
@@ -14,14 +14,14 @@ license_files = LICENSES/*, NOTICE
 author = Lee McCuller
 author_email = mcculler@mit.edu
 
-description = Toolkit for modeling interferometers, circuits, signals, and control systems
+description = utilities for testing, string, numpy, file io, and matplotlib conveniences
 long_description = file: README.md
 long_description_content_type = text/markdown
 
-url = https://github.com/wavestate/wavestate-collection
+url = https://github.com/wavestate/wavestate-utilities
 project_urls =
-    Bug Tracker = https://github.com/wavestate/wavestate-collection/issues
-    Source Code = https://github.com/wavestate/wavestate-collection
+    Bug Tracker = https://github.com/wavestate/wavestate-utilities/issues
+    Source Code = https://github.com/wavestate/wavestate-utilities
 
 classifiers =
         Intended Audience :: Science/Research
@@ -35,6 +35,7 @@ classifiers =
 setup_requires = 'setuptools>=45.0.0'
 install_requires =
     setuptools_scm>=6.0.0
+    wavestate.bunch
 package_dir =
     =src
 packages = find_namespace:
@@ -47,4 +48,4 @@ where = src
 test=pytest
 
 [tools.check_versions]
-    version_file = src/wavestate/collection/_version.py
+    version_file = src/wavestate/utilities/_version.py
