--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 
 [metadata]
 name = wavestate.utilities
-version = 0.9.0.dev0
+version = 0.9.0.rc0
 
 license = Apache-2.0
 license_files = LICENSES/*, NOTICE
