--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 # NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE
 
 [metadata]
-name = wavestate.utilities
+name = wield.utilities
 version = 0.9.2.dev0
 
 license = Apache-2.0
@@ -35,7 +35,7 @@ classifiers =
 setup_requires = 'setuptools>=45.0.0'
 install_requires =
     setuptools_scm>=6.0.0
-    wavestate.bunch
+    wield.bunch
 package_dir =
     =src
 packages = find_namespace:
