--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileCopyrightText: © 2021 Massachusetts Institute of Technology.
-# SPDX-FileCopyrightText: © 2021 Lee McCuller <mcculler@mit.edu>
+# SPDX-FileCopyrightText: © 2021 Lee McCuller <mcculler@caltech.edu>
 # NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE
 
 [metadata]
@@ -12,16 +12,16 @@ license = Apache-2.0
 license_files = LICENSES/*, NOTICE
 
 author = Lee McCuller
-author_email = mcculler@mit.edu
+author_email = mcculler@caltech.edu
 
 description = utilities for testing, string, numpy, file io, and matplotlib conveniences
 long_description = file: README.md
 long_description_content_type = text/markdown
 
-url = https://github.com/wavestate/wavestate-utilities
+url = https://github.com/wieldphysics/wield-utilities
 project_urls =
-    Bug Tracker = https://github.com/wavestate/wavestate-utilities/issues
-    Source Code = https://github.com/wavestate/wavestate-utilities
+    Bug Tracker = https://github.com/wieldphysics/wield-utilities/issues
+    Source Code = https://github.com/wieldphysics/wield-utilities
 
 classifiers =
         Intended Audience :: Science/Research
@@ -48,4 +48,4 @@ where = src
 test=pytest
 
 [tools.check_versions]
-    version_file = src/wavestate/utilities/_version.py
+    version_file = src/wield/utilities/_version.py
